--- a/src/layout/spacing.css
+++ b/src/layout/spacing.css
@@ -1,151 +1,151 @@
-[class~='hgap-0']>*+* {
+[class~='hspace-0']>*+* {
   margin-left: 0;
 }
 
-[class~='hgap-1px']>*+* {
+[class~='hspace-1px']>*+* {
   margin-left: 1px;
 }
 
-[class~='hgap-2px']>*+* {
+[class~='hspace-2px']>*+* {
   margin-left: 2px;
 }
 
-[class~='hgap-3px']>*+* {
+[class~='hspace-3px']>*+* {
   margin-left: 3px;
 }
 
-[class~='hgap-4px']>*+* {
+[class~='hspace-4px']>*+* {
   margin-left: 4px;
 }
 
-[class~='hgap-5px']>*+* {
+[class~='hspace-5px']>*+* {
   margin-left: 5px;
 }
 
-[class~='hgap-6px']>*+* {
+[class~='hspace-6px']>*+* {
   margin-left: 6px;
 }
 
-[class~='hgap-7px']>*+* {
+[class~='hspace-7px']>*+* {
   margin-left: 7px;
 }
 
-[class~='hgap-8px']>*+* {
+[class~='hspace-8px']>*+* {
   margin-left: 8px;
 }
 
-[class~='hgap-9px']>*+* {
+[class~='hspace-9px']>*+* {
   margin-left: 9px;
 }
 
-[class~='hgap-1']>*+* {
+[class~='hspace-1']>*+* {
   margin-left: 1rem;
 }
 
-[class~='hgap-2']>*+* {
+[class~='hspace-2']>*+* {
   margin-left: 2rem;
 }
 
-[class~='hgap-3']>*+* {
+[class~='hspace-3']>*+* {
   margin-left: 3rem;
 }
 
-[class~='hgap-4']>*+* {
+[class~='hspace-4']>*+* {
   margin-left: 4rem;
 }
 
-[class~='hgap-5']>*+* {
+[class~='hspace-5']>*+* {
   margin-left: 5rem;
 }
 
-[class~='hgap-6']>*+* {
+[class~='hspace-6']>*+* {
   margin-left: 6rem;
 }
 
-[class~='hgap-7']>*+* {
+[class~='hspace-7']>*+* {
   margin-left: 7rem;
 }
 
-[class~='hgap-8']>*+* {
+[class~='hspace-8']>*+* {
   margin-left: 8rem;
 }
 
-[class~='hgap-9']>*+* {
+[class~='hspace-9']>*+* {
   margin-left: 9rem;
 }
 
-[class~='vgap-0']>*+* {
+[class~='vspace-0']>*+* {
   margin-top: 0;
 }
 
-[class~='vgap-1px']>*+* {
+[class~='vspace-1px']>*+* {
   margin-top: 1px;
 }
 
-[class~='vgap-2px']>*+* {
+[class~='vspace-2px']>*+* {
   margin-top: 2px;
 }
 
-[class~='vgap-3px']>*+* {
+[class~='vspace-3px']>*+* {
   margin-top: 3px;
 }
 
-[class~='vgap-4px']>*+* {
+[class~='vspace-4px']>*+* {
   margin-top: 4px;
 }
 
-[class~='vgap-5px']>*+* {
+[class~='vspace-5px']>*+* {
   margin-top: 5px;
 }
 
-[class~='vgap-6px']>*+* {
+[class~='vspace-6px']>*+* {
   margin-top: 6px;
 }
 
-[class~='vgap-7px']>*+* {
+[class~='vspace-7px']>*+* {
   margin-top: 7px;
 }
 
-[class~='vgap-8px']>*+* {
+[class~='vspace-8px']>*+* {
   margin-top: 8px;
 }
 
-[class~='vgap-9px']>*+* {
+[class~='vspace-9px']>*+* {
   margin-top: 9px;
 }
 
-[class~='vgap-1']>*+* {
+[class~='vspace-1']>*+* {
   margin-top: 1rem;
 }
 
-[class~='vgap-2']>*+* {
+[class~='vspace-2']>*+* {
   margin-top: 2rem;
 }
 
-[class~='vgap-3']>*+* {
+[class~='vspace-3']>*+* {
   margin-top: 3rem;
 }
 
-[class~='vgap-4']>*+* {
+[class~='vspace-4']>*+* {
   margin-top: 4rem;
 }
 
-[class~='vgap-5']>*+* {
+[class~='vspace-5']>*+* {
   margin-top: 5rem;
 }
 
-[class~='vgap-6']>*+* {
+[class~='vspace-6']>*+* {
   margin-top: 6rem;
 }
 
-[class~='vgap-7']>*+* {
+[class~='vspace-7']>*+* {
   margin-top: 7rem;
 }
 
-[class~='vgap-8']>*+* {
+[class~='vspace-8']>*+* {
   margin-top: 8rem;
 }
 
-[class~='vgap-9']>*+* {
+[class~='vspace-9']>*+* {
   margin-top: 9rem;
 }
